# python-project-52

./: .gitignore  FLASH_MESSAGES_TESTING.md  Makefile  README.md  main.py  manage.py  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties  test_flash_messages.py
.github/workflows/: sonar_cover.yml
task_manager/: models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_delete_status.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: delete.html  form.html  list.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  index.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/users/: delete.html  form.html  list.html  user_confirm_delete.html  user_form.html  user_list.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
