[project]
name = "task-manager"
version = "0.1.0"
description = "Task manager application"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<5.2",
    "psycopg2-binary>=2.9.9",
    "django-bootstrap5>=23.4",
    "django-filter>=23.5",
    "python-dotenv>=1.0",
    "rollbar>=1.0",
    "gunicorn>=22.0",
]

[tool.uv]
# Эта секция важна — именно её читает Hexlet
dev-dependencies = [
    "ruff>=0.5.0",
]